--- a/style/style.css
+++ b/style/style.css
@@ -9,11 +9,11 @@
   margin: 0;
   border: 0;
 }
-html,
-body {
+html,body {
   max-width: 100%;
   max-height: 100%;
-  overflow: hidde
+  overflow-: hidden;
+  wdth: 100vw;
 }
 .sticky {
   position: fixed;
@@ -22,9 +22,9 @@ body {
 }
 .cart {
   width: 32px;
-  position: fixed;
-  right: 7%;
-  margin-top: -3.8rem;
+position: fixed;
+right: 7%;
+margin-top: -3.8rem;
 }
 /* Add some top padding to the page content to prevent sudden quick movement (as the navigation bar gets a new position at the top of the page (position:fixed and top:0) */
 .sticky + .content {
@@ -508,13 +508,14 @@ li a.contact:hover {
   }
   .cart {
     width: 32px;
-    position: fixed;
-    margin-top: -3.8rem;
+position: fixed;
+right: 7%;
+margin-top: -3.8rem;
   }
   .main-nav {
     height: 90px;
     background-color: #0c141c;
-    width: 100vw;
+    width: 100%;
     position: fixed;
     top: 0;
     z-index: 1;
@@ -705,6 +706,8 @@ main {
   background-color: #181818;
   color: white;
   font-family: Montserrat, sans-serif;
+  width: 100%;
+overflow-x: clip;
 }
 .toplogo {
   justify-content: center;
@@ -717,6 +720,7 @@ main {
 .footertop {
   margin-bottom: 5px;
   color: white;
+  border-top: 2rem #0C141C;
 }
 .socialmedia {
   margin-bottom: 6px;
