--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,33 @@
   margin: 0;
   border: 0;
 }
+.results {
+  padding: 0px;
+  background-color: white;
+}
+
+.results ul {margin: 0; padding: 0; }
+.results ul li {
+  list-style: none;
+  border-radius: 3px;
+  opacity: 0;
+  display: none;
+  padding: 8px 12px;
+  transition: all .5s linear;
+}
+
+.show .results ul li {
+  opacity: 1;
+  display: block;
+}
+
+.show .results {
+  padding: 10px;
+}
+
+.results ul li:hover {
+  background: #181818
+}
 .ordernowbuttom{
   background-color: #181818;
   border-radius: 25px;
