--- a/style/style.css
+++ b/style/style.css
@@ -8,6 +8,39 @@
   padding: 0;
   margin: 0;
   border: 0;
+  box-sizing: border-box;
+}
+.popup{
+  width: 400px;
+  background-color: #181818;
+  border-radius: 6px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translate(-50%,-50%) scale(0.1);
+  color: white;
+  text-align: center;
+  padding: 10px 30px 30px ;
+  visibility: hidden;
+  transition: transform 0.4s, top 0.4s;
+  border: 1px solid #2c3e50;
+}
+.popup button:nth-child(4) {
+  width: 100%;
+  height: 30px;
+  background-color: green;
+  border-radius: 8px;
+  margin-top: 10px;
+  font-family: 'Montserrat';
+  color: white;
+  font-weight: bold;
+}
+.open-popup{
+  visibility: visible;
+  top: 50%;
+  transform: translate(-50%,-50%) scale(1);
+  position: fixed;
+
 }
 .results {
   padding: 0px;
@@ -39,12 +72,13 @@
 .ordernowbuttom{
   background-color: #181818;
   border-radius: 25px;
-  padding: 2vh 14vw;
+  padding: 2vh 10vw;
   margin-top: 0px;
   border: 1px solid #2c3e50;
   margin-left: -10px;
   color: white;
   margin-top: 15px;
+  FONT-FAMILY: Montserrat, sans-serif;
   }
 html,body {
   max-width: 100%;
@@ -654,15 +688,14 @@ margin-top: -3.8rem;
   }
   .searchbar {
     height: 3.3rem;  
-    margin-left: 2.5%;
+    margin: 0 auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
     background-color: #181818;
     border-radius: 50px;
     --darkreader-inline-bgcolor: #393e40;
-    width: 78vw;
-    margin-left: 1.5%;
+    width:94.5vw;
     border-radius: 50px;
     
   }
@@ -706,7 +739,7 @@ margin-top: -3.8rem;
   }
   .searcher {
     height: 30px;
-    width: 64vw;
+    width: 69vw;
     outline: none;
     border: none;
     font-size: 1.4rem;
@@ -714,8 +747,6 @@ margin-top: -3.8rem;
     color: white;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
-    padding-right: 16px;
-padding-left: 8px;
   }
   .searchimg {
     height: 22px;
